--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>
-    <%= title %>
-  </title>
+  <title>Laconic | Console</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
